# exq

./: .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml  setup_cuda.py
compiled/demo/: rpgo_compiled_kernels.py
compiled/olmoe-kernels/: rpgo_compiled_kernels.py
compiled/qwen3-30b/: rpgo_compiled_kernels.py
configs/: deepseek-v2-lite.yaml  glm-4-7-flash.yaml  mixtral-8x7b.yaml  qwen3-30b-a3b.yaml
exq/: __init__.py  __main__.py  model_utils.py
exq/codegen/: __init__.py  triton_emitter.py
exq/compiler/: __init__.py  dense_quant_planner.py  joint_scheduler.py
exq/eval/: __init__.py  bench.py  coverage.py  dense_quant_apply.py  gptq.py  modeling.py  quality.py  quant_shim.py  variants.py
exq/kernels/: __init__.py  exq_artifact.py  moe_exq_kernel.py  moe_fused_int4_kernel.py  moe_grouped_gemm.py  moe_int4_kernel.py
exq/profiler/: __init__.py  attention_profiler.py  calibration_runner.py  routing_profiler.py
exq/runtime/: __init__.py  coverage_monitor.py  sglang_backend.py  transformers_integration.py
figures/: fig1_tpot.py  fig2_diagnostic.py  fig3_kl.py  fig4_compile_time.py  fig5_batch_sweep.py  style.py
results/: eval_log.txt  eval_log_dense.txt  int4_cache_benchmark.json  int4_production_batch.json  int4_vs_sglang_int4.json
rpgo/: __init__.py  hf_compat.py
scripts/: bench_e2e_metrics.py  bench_exq_triton.py  bench_int4.py  bench_integration.py  bench_latency.py  bench_latency_real_offload.py  bench_sglang_integration.py  bench_triton_baseline.py  benchmark.py  compare_greedy_vs_ilp.py  compile_dense_model.py  compile_model.py  coverage_vs_recovery.py  demo_e2e.py  diagnostic_regression.py  eval_awq_controlled.py  eval_external_quant.py  eval_gsm8k.py  eval_gsm8k.sh  eval_kl.py  eval_ppl.py  eval_zero_shot.py  exq_diagnose.py  inspect_routing_graph.py  make_results_table.py  profile_dense_model.py  profile_model.py  rpgo_diagnose.py  save_exq_model.py  save_rpgo_model.py  serve_exq.sh  solve_joint.py  stress_benchmarks.py  validate_artifact.py
src/: lib.rs  profile.rs
tests/: test_core.py  test_dense_compiler.py  test_dense_eval.py  test_dense_profiler.py  test_eval.py  test_pipeline.py  test_profiler.py  test_stress.py
(+33 files in other folders)
